# KasteRobot

./: README.md  ReadMe.txt
Calibration/build-src-Desktop-Debug/: CMakeCache.txt.prev  Makefile  cmake_install.cmake  main  qtcsettings.cmake
Calibration/build-src-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-cbff3296a09cafc84862.json  cmakeFiles-v1-22150c3709adc46bcabc.json  codemodel-v2-9a0e75d684fa54f60d0d.json  index-2024-09-25T10-27-25-0221.json  target-main-Debug-3b5e648f98a3c65c343e.json  target-main-Debug-4df61775553d7c5335e7.json
Calibration/build-src-Desktop-Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-5995f655991c96e2bfba.json  codemodel-v2-d08e6f932cae26103117.json  index-2024-09-26T18-05-10-0407.json
Calibration/build-src-Desktop-Debug/.qtc_clangd/: compile_commands.json
Calibration/build-src-Desktop-Debug/.qtc_clangd/.cache/clangd/index/: Camera.cpp.AF98A4F10AA9E1F9.idx  Camera.h.E171372F529D65F1.idx  __locale_t.h.EFD2EEF88C7BC9DC.idx  affine.hpp.AFDBEBA1DC18106C.idx  algorithm.7452D99CE5AF9CF6.idx  algorithmfwd.h.14F34C834ED374AB.idx  align.h.5494118AD529CE49.idx  aligned_buffer.h.8EE052AAD3560DE8.idx  alloc_traits.h.7ED6955E7AD16F96.idx  alloc_traits.h.F1A64BF6445CADDD.idx  alloca.h.B3C3404035C15EA6.idx  allocated_ptr.h.4AFD46821EA88DAE.idx  allocator.h.B3FB8292591D6F88.idx  array.A490162283CE7F6D.idx  assert.h.F44EF353D67C7E11.idx  assertions.h.2D0F623254BA5980.idx  atomic_base.h.98692E5C1A09ED30.idx  atomic_lockfree_defines.h.716873E8B193E59D.idx  atomic_wide_counter.h.3E10DD82C6CABCC3.idx  atomic_word.h.5E745FB4088CABE8.idx  atomicity.h.C7466C2D4C12E80D.idx  auto_ptr.h.9053A4D89CD3CAB5.idx  base.hpp.DDE89F9E396DDD0E.idx  (+245 more)
Calibration/src/: CMakeLists.txt  Camera.cpp  Camera.h  main.cpp
KasteRobot_v1/: CMakeLists.txt  CMakeLists.txt.user.95b0831  CMakeLists.txt.user.f248e2a  Camera.cpp  Camera.h  Gripper.cpp  Gripper.h  Trajectory.cpp  Trajectory.h  main.cpp
